Card One Responsive 375px , 425px and 768px add media query final check

--- a/assets/css/responsive.css
+++ b/assets/css/responsive.css
@@ -120,7 +120,7 @@
     }
 }
 /* Mobile L 425px Device */
-@media only screen and (width: 425px){
+@media only screen and (max-width: 425px){
 	.section-break {
         padding: 30px 0px;
         margin: 25px;
