--- a/assets/css/responsive.css
+++ b/assets/css/responsive.css
@@ -1,9 +1,9 @@
 /* Laptop-Device 1024px  */
-@media only screen and (width: 1024px){
+@media only screen and (max-width: 1024px){
 	
 }
 /* Tablet-Device 768px  */
-@media only screen and (width: 768px){
+@media only screen and (max-width: 768px){
 	.section-break {
         padding: 30px 0px;
         margin: 25px;
